Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5839

[C++ broker] Broker does not set lifetime-policy in AMQP1.0 attach performative

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • 0.28
    • 0.29
    • C++ Broker

    Description

      When an AMQP 1.0 client wants to create a node with a lifetime-policy, it sends it in attach performative, within dynamic-node-properties. But the broker does not set the policy in its attach it sends back (while the node is created with proper performative).

      This confuses the client and e.g. an assert might fail:

      drain --connection-options "

      {protocol:'amqp1.0'}

      " "q; {create:always, assert:always, node:{ properties:

      {'lifetime-policy':'delete-on-close'}

      }}"
      Error: Requested node properties not met:

      {lifetime-policy:delete-on-close}

      Attachments

        Activity

          People

            pmoravec Pavel Moravec
            pmoravec Pavel Moravec
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: