QPID-5839: [C++ broker] Broker does not set lifetime-policy in AMQP1.0 attach performative

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1605051 13f79535-47bb-0310-9956-ffa450edef68